--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta name="twitter:site" content="@MplsFarmMarket" />
 <meta property="article:publisher" content="https://www.facebook.com/MplsFarmersMarket/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"headline":"Home","name":"Minneapolis Farmers Market","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","url":"https://www.mplsfarmersmarket.com/","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
+{"url":"https://www.mplsfarmersmarket.com/","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","@type":"WebSite","headline":"Home","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -205,15 +205,15 @@
   <div class="market-info-wrapper">
     <div id="home-market-one" class="col-12 col-lg-6 home-market-info left-column editable" data-cms-source="/_includes/home-market-info.html" data-cms-index="0">
       <h5>Minneapolis Farmers Market</h5>
-      <p><strong>Now Open Daily <strong>until Oct. 31st&nbsp;</strong>- No Dogs Allowed</strong></p>
-      <p class="market-hours">Daily from 6am - 1pm | Rain or Shine<br />EBT Hours: Thurs. - Sun. from 8am - 1pm</p>
+      <p>Every Sat. &amp; Sun in December</p>
+      <p>Christmas Tree vendors will start daily one week before Thanksgiving</p>
+      <p class="market-hours">Select Dates 9AM - NOON | Rain, Snow or Shine<br />EBT Closed for the season</p>
       <p class="market-address">312 East Lyndale Ave North,<br />Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/lyndale-market">Learn More</a></p>
     </div>
     <div class="col-12 col-lg-6 home-market-info home-market-2 editable" data-cms-source="/_includes/home-market-info.html" data-cms-index="1">
       <h5>Nicollet Mall Market</h5>
       <p><strong>Closed for the 2021 Season</strong></p>
-      <p class="market-hours">6am to 2pm | Rain or Shine<br />EBT Hours 8am to 1pm</p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br />between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/nicollet-market">Learn More</a></p>
     </div>
