--- a/nicollet-market.html
+++ b/nicollet-market.html
@@ -32,7 +32,7 @@
 <meta name="twitter:site" content="@MplsFarmMarket" />
 <meta property="article:publisher" content="https://www.facebook.com/MplsFarmersMarket/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"headline":"Nicollet Market","@type":"WebPage","url":"https://www.mplsfarmersmarket.com/nicollet-market.html","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
+{"url":"https://www.mplsfarmersmarket.com/nicollet-market.html","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@type":"WebPage","headline":"Nicollet Market","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
