--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -154,7 +154,7 @@
           Electronic Benefit Transfer (EBT) Guidelines
         </h1>
         <p class="ebt-text editable" data-cms-index="1" data-cms-source="/ebt-guidelines.html">
-          <strong>EBT will open for the season on May 6th 2023</strong><br><br>OPEN May 6th- October 31st<br><strong>Saturdays and Sundays!</strong><br>8 am to 1 pm
+          <strong>EBT is now closed for the season.<br>Please join us next year!</strong><br>
         </p>
         <h2 class="ebt-text editable" data-cms-index="2" data-cms-source="/ebt-guidelines.html">
           Here is how it works!
@@ -214,8 +214,8 @@
         </p>
       </div>
       <div class="editable" data-cms-index="8" data-cms-source="/ebt-guidelines.html">
-        <h2 class="ebt-text mb-3">MPLS Farmers Market Food Access Program is sponsored by:</h2>
-        <p><a href="https://www.uhccommunityplan.com/" target="_blank"><img alt="United Health Care logo" data-cms-original-src="/assets/img/uhc_logo.svg" src="/assets/img/uhc_logo.svg?_cchid=605182332ea17583e5adb8b7605847cc" style="width: 200px;"> </a></p>
+        <h2 class="ebt-text mb-3">&nbsp;</h2>
+        <p>&nbsp;</p>
       </div>
     </div>
   </div>
